[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Trailer/TrailerBase.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Trailer/States/TowingFollowingState.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Trailer/States/StationaryState.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Trailer/States/FollowingState.gd" type="Script" id=5]

[sub_resource type="SphereMesh" id=1]
radius = 10.0
height = 20.0

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="SphereShape" id=3]
radius = 10.0

[sub_resource type="BoxShape" id=4]
extents = Vector3( 20, 5, 20 )

[node name="TrailerBase" type="KinematicBody"]
script = ExtResource( 1 )

[node name="StateMachine" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="StationaryState" type="Spatial" parent="StateMachine"]
script = ExtResource( 4 )
stateType = "stationary"
isDefault = true

[node name="EmptyFollowingState" type="Spatial" parent="StateMachine"]
script = ExtResource( 5 )
stateType = "empty"

[node name="TowingFollowingState" type="Spatial" parent="StateMachine"]
script = ExtResource( 2 )
stateType = "towing"

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Area" to="." method="onAreaBodyEntered"]
[connection signal="body_exited" from="Area" to="." method="onAreaBodyExited"]
